fix contact section's responsiveness on mobile devices, implement flex-box for skills section

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,8 +11,8 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    font-size: 1rem;
-    gap: 4rem;
+    font-size: 1.rem;
+    gap: 4.3rem;
 
 }
 
@@ -21,7 +21,7 @@ h1 {
 nav {
     width: 100%;
     height: 5em;
-   /*  background-color: rgb(37, 39, 53); */
+    /* background-color: rgb(37, 39, 53); */
     display: flex;
     justify-content: flex-start;
     padding: 1em;
@@ -29,8 +29,8 @@ nav {
 
 .burger_menu {
 	position: absolute;
-	top: 20px;
-	right: 20px;
+	top: 24px;
+	left: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -111,14 +111,14 @@ nav {
 	font-size: 28px;
 }
 
-@media screen and (min-width: 451px) {
-	.burger_menu {
+@media screen and (max-width: 1140px) {
+	.navLink {
 		display: none;
 	}
 }
 
-@media screen and (max-width: 1140px) {
-	.navLink {
+@media screen and (min-width: 451px) {
+	.burger_menu {
 		display: none;
 	}
 }
