--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,8 +4,7 @@ h1 {
 
 nav {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     font-size: 1rem;
     gap: 4rem;
     padding-top: 2rem;
